force-app/main/default/objects/Exl_WO_WOLI_Junction__mdt/Exl_WO_WOLI_Junction__mdt.object-meta.xml
<CustomObject>
    <label>Work Order and Line Item Junction</label>
    <pluralLabel>Work Order and Line Item Junctions</pluralLabel>
</CustomObject>