force-app/main/default/objects/Exl_WO_WOLI_Junction__mdt/fields/Line_Item_Sequence__c.field-meta.xml
<CustomField>
    <fullName>Line_Item_Sequence__c</fullName>
    <label>Line Item Sequence</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>