force-app/main/default/objects/Exl_WO_WOLI_Junction__mdt/fields/POE_Type__c.field-meta.xml
<CustomField>
    <fullName>POE_Type__c</fullName>
    <label>POE Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>