force-app/main/default/objects/Exl_WO_WOLI_Junction__mdt/fields/Work_Order__c.field-meta.xml
<CustomField>
    <fullName>Work_Order__c</fullName>
    <label>Work Order</label>
    <referenceTo>Exl_WorkOrder__mdt</referenceTo>
    <relationshipLabel>Work Order and Line Item Junctions</relationshipLabel>
    <relationshipName>Work_Order_and_Line_Item_Junctions</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>