force-app/main/default/objects/Exl_WO_WOLI_Junction__mdt/listViews/All_Fields.listView-meta.xml
<ListView>
    <fullName>All_Fields</fullName>
    <columns>MasterLabel</columns>
    <columns>Line_Item_Sequence__c</columns>
    <columns>POE_Type__c</columns>
    <columns>Work_Order__c</columns>
    <columns>Work_Order_Line_Item__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Fields</label>
</ListView>