force-app/main/default/objects/Exl_WO_WOLI_Junction__mdt/listViews/Revoke_WO_Junc.listView-meta.xml
<ListView>
    <fullName>Revoke_WO_Junc</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Work_Order__c</columns>
    <columns>Line_Item_Sequence__c</columns>
    <columns>Work_Order_Line_Item__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>DeveloperName</field>
        <operation>startsWith</operation>
        <value>RE_</value>
    </filters>
    <label>Revoke WO Junc</label>
</ListView>